--- a/kafka-backend/package.json
+++ b/kafka-backend/package.json
@@ -9,6 +9,7 @@
   "author": "prk",
   "license": "ISC",
   "dependencies": {
+    "kafka-node": "^5.0.0",
     "mongoose": "^5.12.3"
   },
   "devDependencies": {
