--- a/kafka-backend/package.json
+++ b/kafka-backend/package.json
@@ -12,6 +12,7 @@
     "bcrypt": "^5.0.1",
     "kafka-node": "^5.0.0",
     "mongoose": "^5.12.3",
+    "mongoose-bcrypt": "^1.9.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
