--- a/kafka-backend/package.json
+++ b/kafka-backend/package.json
@@ -13,6 +13,7 @@
     "kafka-node": "^5.0.0",
     "mongoose": "^5.12.3",
     "mongoose-bcrypt": "^1.9.0",
+    "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
